--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,11 @@
+streamlit
 numpy
 pandas
+matplotlib
 seaborn
-streamlit
-underthesea
+scikit-learn
+regex
 wordcloud
-import_ipynb
-SpeechRecognition
-openai
-youtube_search
-webdriver_manager
-selenium
-playsound
-gtts
+underthesea
+imblearn
+nltk
