--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
-streamlit
+openpyxl
 numpy
 pandas
-matplotlib
 seaborn
-scikit-learn
-regex
-wordcloud
+streamlit
 underthesea
-imblearn
-nltk
+wordcloud
+import_ipynb
+SpeechRecognition
+openai
+youtube_search
+webdriver_manager
+selenium
+playsound
+gtts
